src/objects/Transaction_Type__mdt.object
<CustomObject>
    <fields>
        <fullName>Below_Button_Text2__c</fullName>
        <label>Below Button Text2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Below_Button_Text3__c</fullName>
        <label>Below Button Text3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Below_Button_Text__c</fullName>
        <label>Below Button Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Below_Button_Title__c</fullName>
        <label>Below Button Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <label>Family</label>
        <picklist>
            <picklistValues>
                <fullName>Dissolution</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Landing_Page_Text2__c</fullName>
        <label>Landing Page Text2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Landing_Page_Text3__c</fullName>
        <label>Landing Page Text3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Landing_Page_Text4__c</fullName>
        <label>Landing Page Text4</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Landing_Page_Title__c</fullName>
        <label>Landing Page Title</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Serialisation_Class_Name__c</fullName>
        <label>Serialisation Class Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>above_button_text__c</fullName>
        <label>above button text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>isMajorityForm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please select this option if you want the Directors Email screen to be validated with the majority rule</description>
        <inlineHelpText>Please select this option if you want the Directors Email screen to be validated with the majority rule</inlineHelpText>
        <label>isMajorityForm?</label>
        <type>Checkbox</type>
    </fields>
    <label>Transaction Type</label>
    <pluralLabel>Transaction Type</pluralLabel>
</CustomObject>